# rust-open-api-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: main.rs
